re-vamped testing for backend, data structure, and db init and daos